--- a/src/uLearn.Web/Views/Sandbox/RunCode.cshtml
+++ b/src/uLearn.Web/Views/Sandbox/RunCode.cshtml
@@ -11,7 +11,7 @@
 	{
 		@SlideHtml.CodeTextArea(@"using System;
 
-namespace uLearn {
+namespace Ulearn {
 	class Program {
 		public static void Main(string[] args) {
 			Console.Out.WriteLine(""Hello, World!"");
