Disable button on submitting review
+ make nested quotes in slide title

--- a/src/uLearn.Web/Views/Exercise/_ExerciseScoreForm.cshtml
+++ b/src/uLearn.Web/Views/Exercise/_ExerciseScoreForm.cshtml
@@ -108,7 +108,7 @@
 				if (Model.ManualCheckingsLeft == 0)
 				{
 					<div class="text-muted no-manual-checkings-left">
-                        Это последняя работа по&nbsp;задаче «@Model.Slide.Title.TruncateWithEllipsis(30)»
+                        Это последняя работа по&nbsp;задаче «@Model.Slide.Title.MakeNestedQuotes().TruncateWithEllipsis(50)»
                     </div>
 				}
 				else
