Show empty quiz after page reloading if quiz is not fully solved
+ some fixes

--- a/src/uLearn.Web/Views/Shared/Error.cshtml
+++ b/src/uLearn.Web/Views/Shared/Error.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
     @{
-	    var metaImageUrl = "~/Content/logo.png";
+	    var metaImageUrl = "/Content/logo.png";
 	    var metaTitle = "Ошибка";
 	    var metaDescription = "Интерактивные учебные онлайн-курсы по программированию";
 	    var metaKeywords = "";
