--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 <html>
 <head>
     @{
-	    var metaImageUrl = "~/Content/logo.png";
+	    var metaImageUrl = "/Content/logo.png";
 	    var metaTitle = ViewBag.Title + " на ulearn.me";
 	    var metaDescription = "Интерактивные учебные онлайн-курсы по программированию";
 	    var metaKeywords = "";
