Toggle css class for only-full-scores

--- a/src/uLearn.Web/Views/Analytics/CourseStatistics.cshtml
+++ b/src/uLearn.Web/Views/Analytics/CourseStatistics.cshtml
@@ -146,7 +146,7 @@
 	var orderingHint = "Нажмите для сортироки по этому полю. Нажмите с зажатым Shift, чтобы сортировать по нескольким столбцам";
 }
 <div class="course-statistics__wrapper">
-<table class="course-statistics" data-initial-order="desc">
+<table class="course-statistics only-full-scores" data-initial-order="desc">
 <thead>
 <tr>
 	<th rowspan="2" class="student-name" data-sorter="true">Фамилия Имя</th>
