Student submissions: show only 2 rows by default

--- a/src/uLearn.Web/Content/exercise/student-submissions.css
+++ b/src/uLearn.Web/Content/exercise/student-submissions.css
@@ -39,6 +39,10 @@
     font-size: 14px;
 }
 
+.student-submissions__show-all td {
+    text-align: center;
+}
+
 .student-submissions table tbody td {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -62,6 +66,7 @@
 .student-submissions__filter__input {
     display: inline-block;
     margin-right: 5px;
+    max-width: 300px;
 }
 
 .student-submissions__filter .loading-icon {
@@ -71,7 +76,10 @@
 
 .student-submissions__name-column {
     min-width: 200px;
-    max-width: 300px;
+    max-width: 350px;
+    width: 350px;
+    text-overflow: ellipsis;
+    overflow-x: hidden;
 }
 
 @media(max-width: 720px) {
