--- a/src/uLearn.Web/Views/Exercise/StudentSubmissions.cshtml
+++ b/src/uLearn.Web/Views/Exercise/StudentSubmissions.cshtml
@@ -4,7 +4,7 @@
     <h1>Решения</h1>
     
     <div class="student-submissions__filter" data-url="@Url.Action("StudentSubmissionsTable", new { courseId = Model.CourseId, slideId = Model.Slide.Id, name = "NAME"})">
-        <input class="student-submissions__filter__input form-control" placeholder="Начните вводить фамилию или имя"/>
+        <input class="student-submissions__filter__input form-control" placeholder="Начните вводить фамилию, имя или логин"/>
         <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate loading-icon" style="display: none"></span>
     </div>
 
