--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -128,6 +128,53 @@ p {
 .code, .code-exercise {
 }
 
+.expandable-code {
+	position: relative;
+}
+
+.expandable-code.collapsed:after {
+	content: "";
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	height: 60px;
+	background: linear-gradient(180deg, hsla(0, 0%, 100%, 0), white);
+	z-index: 4;
+}
+
+.revealed .expandable-code.collapsed:after {
+	background: linear-gradient(180deg, hsla(0, 0%, 100%, 0), rgb(231, 241, 255));
+}
+
+.expandable-code__button-wrapper {
+	position: absolute;
+	width: 100%;
+	text-align: center;
+	bottom: 5px;
+	z-index: 5;
+}
+
+.expandable-code__button {
+	display: inline-block;
+	background-color: #6e8aff;
+	color: white;
+	padding: 3px 15px;
+	border: none;
+	border-radius: 15px;
+	box-shadow: 0px 4px 10px 1px #d8d3f3;
+}
+
+.expandable-code__button:hover {
+	background-color: #4565ed;
+}
+
+.expandable-code__button:hover,
+.expandable-code__button:focus,
+.expandable-code__button:active {
+	outline: none;
+}
+
 .revealed {
 	background-color: #e7f1ff;
 	padding: 20px;
