Fix returning back to student submission filtering
+ show waiting status for code review

--- a/src/uLearn.Web/Views/Exercise/StudentSubmissionsTable.cshtml
+++ b/src/uLearn.Web/Views/Exercise/StudentSubmissionsTable.cshtml
@@ -66,7 +66,11 @@
 	            if (userSubmissions.Any(s => s.ManualCheckings.Any()))
 	            {
 		            <td>
-                        @if (isFirstReviewScore)
+                        @if (userSubmissions.All(s => s.ManualCheckings.All(c => !c.IsChecked)))
+                        {
+	                        <span class="text-muted">Ожидает</span>    
+                        }
+                        else if (isFirstReviewScore)
                         {
 	                        <text>+</text>@Model.ManualCheckingScores[user.Id].PluralizeInRussian(RussianPluralizationOptions.Score)
 	                        isFirstReviewScore = false;
