Remove System Administrator restriction for student submissions table

--- a/src/uLearn.Web/Views/Exercise/Submission.cshtml
+++ b/src/uLearn.Web/Views/Exercise/Submission.cshtml
@@ -222,7 +222,7 @@
 	@Html.Partial("_TopUserReviewComments", Model)
 }
 
-@if (User.IsSystemAdministrator() && User.HasAccessFor(Model.CourseId, CourseRole.Instructor) && ! Model.InstructorView)
+@if (User.HasAccessFor(Model.CourseId, CourseRole.Instructor) && ! Model.InstructorView)
 {
 	@Html.Action("StudentSubmissions", "Exercise", new { courseId = Model.CourseId, slideId = Model.Slide.Id })
 }
