--- a/src/uLearn.Web/Content/exercise/student-submissions.css
+++ b/src/uLearn.Web/Content/exercise/student-submissions.css
@@ -17,7 +17,12 @@
 
 .student-submissions table th,
 .student-submissions table td {
-    padding: 5px 50px 3px 5px;
+    padding: 5px 40px 3px 5px;
+}
+
+.student-submissions table th:last-child,
+.student-submissions table td:last-child {
+    padding-right: 3px;
 }
 
 @media(max-width: 720px) {
