--- a/src/uLearn.Web/Views/Shared/_Layout.cshtml
+++ b/src/uLearn.Web/Views/Shared/_Layout.cshtml
@@ -49,12 +49,12 @@
 	</button>
 	<div class="container">
 		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".greeting-collapse-class">
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			@Html.ActionLink("Ulearn", "Index", "Home", null, new { @class = "navbar-brand" })
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".greeting-collapse-class">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">Ulearn</a>
 			<ul class="notifications__mobile-nav nav navbar-nav pull-right visible-xs">
 				@if (User.Identity.IsAuthenticated)
 				{
