--- a/src/uLearn.Web/Views/Notifications/Settings.cshtml
+++ b/src/uLearn.Web/Views/Notifications/Settings.cshtml
@@ -174,11 +174,11 @@ else
 </div>
 
 <script>
-	var notificationTypesByCourse = @Html.Raw(
+	window.notificationTypesByCourse = @Html.Raw(
 		                                Model.NotificationTypesByCourse.ToDictionary(kvp => kvp.Key, kvp => kvp.Value.Select(t => (int)t)).JsonSerialize()
 		                                );
 
-	var notificationTransportsSettings = @Html.Raw(Model.NotificationTransportsSettings.Select(
+	window.notificationTransportsSettings = @Html.Raw(Model.NotificationTransportsSettings.Select(
 		                                     kvp => new
 		                                     {
 			                                     courseId = kvp.Key.Item1,
