Different react application issues
File downloading,
cleanUserCode,
slide navigation,
elmah and certificate styles
and more

--- a/src/uLearn.Web/Views/Exercise/Submission.cshtml
+++ b/src/uLearn.Web/Views/Exercise/Submission.cshtml
@@ -165,7 +165,7 @@
 			<img src="/Content/loading.gif"/>
 		</div>
 		<script type="text/javascript">
-			function cleanUserCode() {
+			window.cleanUserCode = function() {
 				var $secretCodeExercise = $('#secretCodeExercise');
 				$('.code-exercise')[0].codeMirrorEditor.setValue($secretCodeExercise.text());
 			}
